environments/gloo-edge/gateway-api/bookinfo-app/base/bookinfo-gateway-https.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bookinfo-gateway-https
  namespace: gloo-system
  labels:
    gateway: https
spec:
  gatewayClassName: gloo-gateway
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "bookinfo.edge.glooplatform.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: cf-advanced-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Same
