environments/gloo-edge/gateway-api/bookinfo-app/base/bookinfo-parent-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bookinfo-parent-route
  namespace: bookinfo
  labels:
    example: bookinfo-route
    gateway: https
spec:
  hostnames:
  - "bookinfo.edge.glooplatform.com"
  parentRefs:
    - name: bookinfo-gateway-https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: '*'
          namespace: bookinfo
          group: gateway.networking.k8s.io
          kind: HTTPRoute
      matches:
        - path:
            type: PathPrefix
            value: /api/bookinfo
      #filters:
      #  - type: ExtensionRef
      #    extensionRef:
      #      group: gateway.solo.io
      #      kind: RouteOption
      #      name: bookinfo-route-policies
